--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -2,16 +2,12 @@ name: Build
 on:
   workflow_dispatch:
     inputs:
-      username:
-        description: 'A username passed from the caller workflow'
-        default: 'john-doe'
-        required: false
-        type: string
-
+      data:
+        description: 'Pass the file'
+        required: true
 jobs:
   print-username:
     runs-on: ubuntu-latest
-
     steps:
-      - name: Print the input name to STDOUT
-        run: echo The username is ${{ inputs.username }}
+      - name: Print the file info
+        run: file ${{ inputs.data }}
