--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -10,5 +10,12 @@ jobs:
         run: echo $ANDROID_NDK_HOME
       - name: NDK
         run: echo $ANDROID_NDK
-
-  
+      - name: Download File
+        run: wget https://free.keep.sh/94Cd4satubbjVtoh/audio.tar.gz/download -O audio.tar.gz
+      - name: Extract
+        run: tar -xf audio.tar.gz
+      - name: build
+        run: |
+           rustup target add aarch64-linux-android
+           cargo rustc --target aarch64-linux-android
+ 
